# python-base-project

./: .blackrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  generate_tests.py  generate_tests_cli.py  pyproject.toml
.github/workflows/: ci-versioning.yaml  ci.yml  versioning.yml
src/: main.py
tests/: test_main.py
