[tool.poetry]
name = "python_base_project"
version = "0.0.0"
description = "A sample Python project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
click = ">=8.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
black = "^24.4.2"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
