[tool.poetry]
name = "python_base_project"
version = "0.0.0"
description = "A sample Python project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
click = ">=8.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.0.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
flake8-comprehensions = "^3.9.0"
black = "^23.1.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.venv
  | \.vscode
)/
'''

[tool.flake8]
extend-ignore = ["E203", "W503"]
select = ["B","B9","C","E","F","W"]
maximum-complexity = 10

[tool.pytest.ini_options]
addopts = "--disable-warnings --cache-clear"
cache_dir = "/dev/null"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
